db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprod-db-deployment
spec:
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: sandipgghimire/vprodb:latest
        ports:
        - name: mysql-port    
          containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: local-pvc
