rbq-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: vprod-rbq-deployment
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq
        ports:
        - name: amqp
          containerPort: 5672
