vproapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deployment
spec:
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp 
    spec:
      containers:
      - name: vproapp
        image: sandipgghimire/vproapp:
        ports:
        - name: vproapp-port   
          containerPort: 8080
