mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vprocache01
  ports:
    - protocol: TCP
      port: 11211
      targetPort: memcached-port
  type: ClusterIP
