vproapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp
spec:
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: app-port
  type: ClusterIP
